@@ -5,16 +5,16 @@ shm_key=/var/tmp/
 shm_size=10
 trigger_dir=/storage/SF.NET/BARTLBY/bartlby-core/trigger
 basedir=/storage/SF.NET/BARTLBY/bartlby-core/
-user=klewan
+user=root
 logfile=/var/log/bartlby
 daemon=true
 xlogfile=/dev/stdout
 performance_dir=/storage/SF.NET/BARTLBY/bartlby-core/perf/
 pidfile_dir=/var/run/
 sched_round_pause=1
+sirene_interval=10
 
-
-trigger_msg=State Change ($READABLE_STATE)\n*********** $PROGNAME $VERSION ********************\n[  Server: $SERVER, Service: $SERVICE, State: $READABLE_STATE]\n$MESSAGE
+trigger_msg=State Change ($READABLE_STATE)\\n*********** $PROGNAME $VERSION ********************\\n[  Server: $SERVER, Service: $SERVICE, State: $READABLE_STATE]\\n$MESSAGE
 
 mysql_host=localhost
 mysql_user=bartlby
